--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-file-base64": "^1.0.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0"
   },
